Bug 162586 - Unable to copy & paste Japanese text
Summary: Unable to copy & paste Japanese text
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-25 04:51 UTC by Yukiko Bando
Modified: 2008-06-02 04:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yukiko Bando 2008-05-25 04:51:43 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

When I select (and copy) Japanese text in Konsole or Yakuake, only the first character is copied to Klipper. No problem with English text.
Comment 1 Christophe Marin 2008-05-26 19:35:51 UTC
Confirmed in trunk (kdebase rev. 812716).
Comment 2 Robert Knight 2008-06-02 04:31:06 UTC
SVN commit 815514 by knight:


Fix copy/select and paste of text with double-width characters. 
When decoding a line of terminal characters to plain text, 
skip the 'hidden' part of double-width characters.

BUG: 162586



 M  +6 -3      TerminalCharacterDecoder.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=815514