Fix copy/select and paste of text with double-width characters. When decoding a line of terminal characters to plain text, skip the 'hidden' part of double-width characters.

BUG: 162586


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=815514