src/TerminalCharacterDecoder.cpp
@@ -28,6 +28,9 @@
 // KDE
 #include <kdebug.h>
 
+// Konsole
+#include "konsole_wcwidth.h"
+
 using namespace Konsole;
 PlainTextDecoder::PlainTextDecoder()
  : _output(0)
@@ -96,12 +99,12 @@ void PlainTextDecoder::decodeLine(const Character* const characters, int count, 
                 outputCount--;
         }
     }
-
-	for (int i=0;i<outputCount;i++)
+	
+    for (int i=0;i<outputCount;)
 	{
 		plainText.append( QChar(characters[i].character) );
+        i += qMax(1,konsole_wcwidth(characters[i].character));
 	}
-
 	*_output << plainText;
 }
 
